behavioral: complete PR 247 review remediation